code/part1/Nelson-Mwembe-VPC.yaml
---
Description: VPC base template which sets up the requisite network infrastructure into which the above resources can be deployed

Parameters:
  EnvironmentName: 
    Type: String
    Default: DE-Extract

  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 192.168.0.0/16

  DataCenterPublicSubnetCIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
    Type: String
    Default: 192.168.10.0/24

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 
        Ref: VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: 
            Ref: EnvironmentName

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: 
            Ref: EnvironmentName

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: 
        Ref: InternetGateway
      VpcId: 
        Ref: VPC

  DataCenterPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: 
        Ref: VPC
      AvailabilityZone: 
        Fn::Select: 
        - 0
        - Fn::GetAZs: ""
      CidrBlock: 
        Ref: DataCenterPublicSubnetCIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: DE-Extract Data Center Subnet

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: 
        Ref: VPC
      Tags:
        - Key: Name
          Value: DE-Extract Public Routes

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: 
        Ref: PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: 
        Ref: InternetGateway

  DataCenterPublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: 
        Ref: PublicRouteTable
      SubnetId: 
        Ref: DataCenterPublicSubnet


  WindowsInstanceSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "DE-Extract-WindowsInstanceSG"
      GroupDescription: "Permits RDP access to an instance deployed within the public subnet of the VPC"
      VpcId: 
        Ref: VPC
      SecurityGroupIngress:
        IpProtocol: tcp 
        FromPort: 3389
        ToPort: 3389
        CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: DE-Extract-WindowsInstanceSG


  FileServerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "DE-Extract-FileServerSG"
      GroupDescription: "Permits Secure Shell access to the file server"
      VpcId: 
        Ref: VPC
      SecurityGroupIngress:
        IpProtocol: tcp 
        FromPort: 22
        ToPort: 22
        CidrIp: 192.168.10.0/24
      Tags:
        - Key: Name
          Value: DE-Extract-FileServerSG
    

  FileGatewaySG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "DE-Extract-FileGatewaySG"
      GroupDescription: "Controls the access to the file gateway instance"
      VpcId: 
        Ref: VPC
      SecurityGroupIngress:
        IpProtocol: tcp 
        FromPort: 1
        ToPort: 65534
        CidrIp: 192.168.0.0/16
      Tags:
        - Key: Name
          Value: DE-Extract-FileGatewaySG

Outputs:
  VPC:
    Description: A reference to the created VPC
    Value:
      Ref: VPC

  DataCentrePublicSubnetCIDR:
    Description: A reference to the created DataCentrePublicSubnetCIDR
    Value: 
      Ref: DataCenterPublicSubnetCIDR

  WindowsInstanceSG:
    Description: RDP access to an instance deployed within the public subnet
    Value: 
      Ref: WindowsInstanceSG
  
  FileServerSG:
    Description: Permits Secure Shell access to the file server
    Value: 
      Ref: FileServerSG

  FileGatewaySG:
    Description: Controls the access to the file gateway instance
    Value: 
      Ref: FileGatewaySG
...
